MCA App/Release/MCA Dev Org/src/objects/Rule_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Comparison_Type__c</fullName>
        <description>Signifies the type of comparison and the available Operator for comparison. 
Single  - Signifies comparison of Field API Name with a single value. 
Multiple  - Signifies comparison of Field API Name with a pipe separated list of values. 
Range  - Signifies comparison of Field API Name in a specific range value.</description>
        <inlineHelpText>Single  - Signifies comparison of Field API Name with a single value. 
Multiple  - Signifies comparison of Field API Name with a pipe separated list of values. 
Range  - Signifies comparison of Field API Name in a specific range value.</inlineHelpText>
        <label>Comparison Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple – Single Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple – Multi Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>API Name of the field on Opportunity to compare in order to assign the score configured in the Value to assign field.</description>
        <inlineHelpText>API Name of the field on Opportunity to compare in order to assign the score configured in the Value to assign field.</inlineHelpText>
        <label>Comparison Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Field_Value_s__c</fullName>
        <description>Signifies the Maximum value to be compare with Comparison Field Name If Comparison Type is Range</description>
        <inlineHelpText>Signifies the Maximum value to be compare with Comparison Field Name If Comparison Type is Range</inlineHelpText>
        <label>Upper Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Field_Value_s__c</fullName>
        <description>Signifies the Minimum value to be compare with Comparison Field Name</description>
        <inlineHelpText>Signifies the Minimum value to be compare with Comparison Field Name</inlineHelpText>
        <label>Lower Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_to_Use__c</fullName>
        <description>Operator to be used for comparison for the selected Comparison Type.</description>
        <inlineHelpText>Operator to be used for comparison for the selected Comparison Type.</inlineHelpText>
        <label>Comparison Operator</label>
        <picklist>
            <controllingField>Comparison_Type__c</controllingField>
            <picklistValues>
                <fullName>equals to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than or equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than or equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in between</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>includes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>excludes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Parent Rule Name</description>
        <inlineHelpText>Parent Rule Name</inlineHelpText>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Rule Criterias</relationshipLabel>
        <relationshipName>Rule_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score_Value_to_Assign__c</fullName>
        <description>Signifies the score to be assigned to the Scoring Field to Update if this Rule Criteria evaluates to True.</description>
        <inlineHelpText>Signifies the score to be assigned to the Scoring Field to Update if this Rule Criteria evaluates to True.</inlineHelpText>
        <label>Value to Assign</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rule Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Operator_to_Use__c</columns>
        <columns>Comparison_Type__c</columns>
        <columns>Min_Field_Value_s__c</columns>
        <columns>Max_Field_Value_s__c</columns>
        <columns>Rule__c</columns>
        <columns>Score_Value_to_Assign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Comparison_Type_Range</fullName>
        <active>true</active>
        <description>When the Comparison Type is Range then Max value is required.</description>
        <errorConditionFormula>ISBLANK( Max_Field_Value_s__c ) &amp;&amp; ISPICKVAL( Comparison_Type__c , &quot;Range&quot;)</errorConditionFormula>
        <errorDisplayField>Max_Field_Value_s__c</errorDisplayField>
        <errorMessage>The Max value is required as the Comparison Type is &quot;Range&quot;</errorMessage>
    </validationRules>
</CustomObject>